--- a/irs-client/src/app/auth/auth.component.html
+++ b/irs-client/src/app/auth/auth.component.html
@@ -2,11 +2,16 @@
 <!--  <p>{{user.id+', '+user.username}}</p>-->
 <!--</div>-->
 
-<div class="main">
+<div class="auth-main">
+
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span  class="title"><a href="http://localhost:4200/">I. R. S.</a></span>
+    </mat-toolbar-row>
+  </mat-toolbar>
+
   <form [formGroup]="authForm" (ngSubmit)="tryAuth()">
-
     <div class="loginForm">
-
       <h1>LOGIN TO <strong>IRS</strong></h1>
 
       <div class="loginFormField">
@@ -27,10 +32,12 @@
         </mat-form-field>
       </div>
 
-      <button type="submit" mat-flat-button color="primary">LOGIN</button>
-
+      <button type="submit" mat-flat-button color="primary">
+        <fa-icon class="loginIcon" [icon]="['fas', 'sign-in-alt']"></fa-icon>
+        <span>LOGIN</span>
+      </button>
       <mat-error>{{this.errorStatement}}</mat-error>
-
     </div>
   </form>
+
 </div>
