--- a/irs-client/src/app/main/main.component.css
+++ b/irs-client/src/app/main/main.component.css
@@ -3,3 +3,21 @@ app-auth-toolbar {
   padding: 0;
   height: 30px;
 }
+
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  background-color: white;
+}
+
+.sidebar-container {
+  background-color: whitesmoke;
+  margin: 5px;
+  padding: 10px;
+}
+
+.dashboard-container {
+  background-color: whitesmoke;
+  margin: 5px;
+  padding: 10px;
+}
