--- a/irs-client/src/app/main/sidebar/sidebar.component.html
+++ b/irs-client/src/app/main/sidebar/sidebar.component.html
@@ -28,6 +28,13 @@
     </div>
   </button>
 
+  <button (click)="navigate('/reports')" class="component-button" mat-stroked-button>
+    <div class="button-content">
+      <fa-icon [icon]="['fas', 'users']" size="2x"></fa-icon>
+      <h2>Reports and Analysis</h2>
+    </div>
+  </button>
+
   <button class="component-button" mmat-stroked-button disabled>
     <div class="button-content">
       <fa-icon [icon]="['fas', 'coins']" size="2x"></fa-icon>
