Created line chart for monthly sales forecast

--- a/irs-client/src/app/main/dashboard/dashboard.component.html
+++ b/irs-client/src/app/main/dashboard/dashboard.component.html
@@ -31,6 +31,16 @@
     </button>
   </mat-grid-tile>
 
+<!-- Reports and Analytics -->
+<mat-grid-tile class="component-tile">
+  <button (click)="navigate('/reports')" class="component-button" mat-flat-button color="primary">
+    <div class="button-content">
+      <fa-icon [icon]="['fas', 'chart-line']" size="3x"></fa-icon>
+      <h2>Reports and Analytics</h2>
+    </div>
+  </button>
+</mat-grid-tile>
+
 <!-- Finances -->
   <mat-grid-tile class="component-tile">
     <button class="component-button" mat-flat-button color="primary" disabled>
