--- a/irs-client/src/app/main/sidebar/sidebar.component.html
+++ b/irs-client/src/app/main/sidebar/sidebar.component.html
@@ -30,8 +30,8 @@
 
   <button (click)="navigate('/reports')" class="component-button" mat-stroked-button>
     <div class="button-content">
-      <fa-icon [icon]="['fas', 'users']" size="2x"></fa-icon>
-      <h2>Reports and Analysis</h2>
+      <fa-icon [icon]="['fas', 'chart-line']" size="2x"></fa-icon>
+      <h2>Reports and Analytics</h2>
     </div>
   </button>
 
