--- a/irs-client/src/app/main/sidebar/sidebar.component.css
+++ b/irs-client/src/app/main/sidebar/sidebar.component.css
@@ -18,5 +18,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  font-size: 0.7vw; 
   /*grid-template-columns: 1fr 4fr;*/
 }
