add new item form

--- a/irs-client/src/app/inventory/items/createitem/createitem.component.html
+++ b/irs-client/src/app/inventory/items/createitem/createitem.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="add-title">
-        <h2 class="primary">Add customer</h2>
+        <h2 class="primary">Add a new item</h2>
     </div>
     <div>
         <form [formGroup]="createItemForm" (change)="formChanged()">
