--- a/irs-client/src/app/inventory/items/createitem/discard-form/discard-form.component.html
+++ b/irs-client/src/app/inventory/items/createitem/discard-form/discard-form.component.html
@@ -1,5 +1,5 @@
 <h3>Are you sure you want to discard the changes?</h3>
 <div>
-    <button mat-raised-button type="button" class="Delete-btn" (click)="cancelN()">Discard</button>
-    <button mat-raised-button type="submit" color="primary" class="Cancel-btn" (click)="cancel()">Cancel</button>
+    <button mat-raised-button type="button" color="warn" class="Delete-btn" (click)="cancelN()">Discard</button>
+    <button mat-raised-button type="submit" class="Cancel-btn" (click)="cancel()">Cancel</button>
 </div>
