--- a/irs-client/src/app/inventory/items/items.component.html
+++ b/irs-client/src/app/inventory/items/items.component.html
@@ -4,12 +4,23 @@
     <div class="content-container">
         <div class="items-table-container">
             <h1>Items</h1>
-            <mat-form-field>
-                <mat-label>Filter</mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="Search">
-            </mat-form-field>
-            <div>
-                <button mat-raised-button color="primary" (click)="openDialog()">Add</button>
+            <div layout="row" flex>
+                <mat-form-field flex class="md-icon-float md-block md-title">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Search">
+                </mat-form-field>
+                <div style="float: right;margin-right: 20px;">
+                    <button mat-raised-button color="primary" (click)="openDialog()">
+                        <fa-icon [icon]="['fas', 'plus']" size="1x"></fa-icon>
+                        Add items from .csv
+                    </button>
+                </div>
+                <div style="float: right;">
+                    <button mat-raised-button color="primary" (click)="openDialog()">
+                        <fa-icon [icon]="['fas', 'plus']" size="1x"></fa-icon>
+                        Add a new item
+                    </button>
+                </div>
             </div>
             <table mat-table [dataSource]="items.results" class="mat-elevation-z8">
 
