--- a/irs-client/src/app/inventory/items/createitem/createitem.component.html
+++ b/irs-client/src/app/inventory/items/createitem/createitem.component.html
@@ -40,6 +40,16 @@
                         </mat-form-field>
                     </div>
                 </mat-grid-tile>
+                <mat-form-field>
+                    <mat-label>Choose an option</mat-label>
+                    <select matNativeControl [disabled]="disableSelect.value">
+                      <option value="" selected></option>
+                      <option value="volvo">Volvo</option>
+                      <option value="saab" disabled>Saab</option>
+                      <option value="mercedes">Mercedes</option>
+                      <option value="audi">Audi</option>
+                    </select>
+                </mat-form-field>
                 <!-- <mat-grid-tile>
                     <div class="text-inside">
                         <mat-radio-group class="gender">
