--- a/irs-client/src/app/inventory/items/createitem/createitem.component.html
+++ b/irs-client/src/app/inventory/items/createitem/createitem.component.html
@@ -42,7 +42,7 @@
                 </mat-grid-tile>
                 <mat-form-field>
                     <mat-label>Choose an option</mat-label>
-                    <select matNativeControl [disabled]="disableSelect.value">
+                    <select matNativeControl>
                       <option value="" selected></option>
                       <option value="volvo">Volvo</option>
                       <option value="saab" disabled>Saab</option>
