--- a/irs-client/src/app/inventory/items/createitem/createitem.component.html
+++ b/irs-client/src/app/inventory/items/createitem/createitem.component.html
@@ -40,25 +40,26 @@
                         </mat-form-field>
                     </div>
                 </mat-grid-tile>
-                <mat-form-field>
-                    <mat-label>Choose an option</mat-label>
-                    <select matNativeControl>
-                      <option value="" selected></option>
-                      <option value="volvo">Volvo</option>
-                      <option value="saab" disabled>Saab</option>
-                      <option value="mercedes">Mercedes</option>
-                      <option value="audi">Audi</option>
-                    </select>
-                </mat-form-field>
-                <!-- <mat-grid-tile>
+                <mat-grid-tile>
                     <div class="text-inside">
-                        <mat-radio-group class="gender">
-                            <div style="color:grey;">Gender</div>
-                            <mat-radio-button color="primary" style="padding:4px 4px 0px 0px;" value="1">Male</mat-radio-button>
-                            <mat-radio-button color="primary" style="padding:4px 0px 0px 24px;" value="2">Female</mat-radio-button>
-                        </mat-radio-group>
+                        <mat-form-field>
+                            <!-- <mat-label>Choose an option</mat-label>
+                            <select matNativeControl>
+                            <option value="" selected>Category</option>
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                            </select> -->
+                            <mat-label>Choose an option</mat-label>
+                            <mat-select [formControl]="category" placeholder="Category" name="item_category">
+                                <mat-option *ngFor="let category of categories" [value]="category.category_id">
+                                    {{category.category_name}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
                     </div>
-                </mat-grid-tile> -->
+                </mat-grid-tile>
                 <mat-grid-tile>
                     <div class="text-inside">
                         <mat-form-field class="example-full-width">
