--- a/irs-client/src/app/inventory/items/createitem/createitem.component.html
+++ b/irs-client/src/app/inventory/items/createitem/createitem.component.html
@@ -43,17 +43,9 @@
                 <mat-grid-tile>
                     <div class="text-inside">
                         <mat-form-field>
-                            <!-- <mat-label>Choose an option</mat-label>
-                            <select matNativeControl>
-                            <option value="" selected>Category</option>
-                            <option value="volvo">Volvo</option>
-                            <option value="saab">Saab</option>
-                            <option value="mercedes">Mercedes</option>
-                            <option value="audi">Audi</option>
-                            </select> -->
                             <mat-label>Choose an option</mat-label>
-                            <mat-select [formControl]="category" placeholder="Category" name="item_category">
-                                <mat-option *ngFor="let category of categories" [value]="category.category_id">
+                            <mat-select matNativeControl placeholder="Category" formControlName="item_category">
+                                <mat-option *ngFor="let category of categories" [(value)]="category.category_id">
                                     {{category.category_name}}
                                 </mat-option>
                             </mat-select>
