--- a/irs-client/src/app/inventory/items/edititem/edititem.component.html
+++ b/irs-client/src/app/inventory/items/edititem/edititem.component.html
@@ -1,1 +1,71 @@
-<p>edititem works!</p>
+<div>
+    <div class="add-title">
+        <h2 class="primary">Edit item</h2>
+    </div>
+    <div>
+        <form [formGroup]="editItemForm" (change)="formChanged()">
+            <mat-grid-list cols="2" [cols]="breakpoint" rowHeight="85px" (window:resize)="onResize($event)">
+                <mat-grid-tile>
+                    <div class="text-inside">
+                        <mat-form-field>
+                            <input matInput placeholder="Code" formControlName="item_code" required>
+                            <!-- <mat-error *ngIf="addCusForm.controls.firstname.hasError('required')">
+                                Please enter first name
+                            </mat-error>
+                            <mat-error *ngIf="addCusForm.controls.firstname.hasError('pattern')">
+                                Please enter valid first name
+                            </mat-error> -->
+                        </mat-form-field>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <div class="text-inside">
+                        <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Title" formControlName="item_title" required>
+                        </mat-form-field>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <div class="text-inside">
+                        <mat-form-field class="example-full-width">
+                            <input matInput type="number" placeholder="Price" formControlName="item_price" required>
+                        </mat-form-field>
+                    </div>
+                </mat-grid-tile>
+
+                <mat-grid-tile>
+                    <div class="text-inside">
+                        <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Company" formControlName="item_company" required>
+                        </mat-form-field>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <div class="text-inside">
+                        <mat-form-field>
+                            <mat-label>Choose an option</mat-label>
+                            <mat-select matNativeControl placeholder="Category" formControlName="item_category">
+                                <mat-option *ngFor="let category of categories" [(value)]="category.category_id">
+                                    {{category.category_name}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <div class="text-inside">
+                        <mat-form-field class="example-full-width">
+                            <input matInput type="number" placeholder="Discount" formControlName="item_discount" required>
+                        </mat-form-field>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <div class="btn-sec">
+                <button mat-raised-button type="submit" color="primary" class="Update-btn" (click)="editItem()">Save</button>
+                <button mat-raised-button type="button" class="Discard-btn" (click)="openDialog()">Cancel</button>
+            </div>
+
+        </form>
+    </div>
+</div>
