Added dashboard for inventory module

--- a/irs-client/src/app/inventory/items/items.component.html
+++ b/irs-client/src/app/inventory/items/items.component.html
@@ -1,3 +1,6 @@
+<div class="auth-toolbar-container">
+    <app-auth-toolbar></app-auth-toolbar>
+</div>
 <div class="main-container">
     <app-sidebar class="sidebar-container"></app-sidebar>
 
