--- a/irs-client/src/app/inventory/category/category.component.html
+++ b/irs-client/src/app/inventory/category/category.component.html
@@ -1,1 +1,69 @@
-<p>category works!</p>
+<div class="auth-toolbar-container">
+    <app-auth-toolbar></app-auth-toolbar>
+</div>
+<div class="main-container">
+    <app-sidebar class="sidebar-container"></app-sidebar>
+
+    <div class="content-container">
+        <div class="items-table-container">
+            <h1>Items</h1>
+            <div layout="row" flex>
+                <mat-form-field flex class="md-icon-float md-block md-title">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Search">
+                    <fa-icon matSuffix [icon]="['fas', 'search']" matsuffix size="1x"></fa-icon>
+                </mat-form-field>
+                <div style="float: right;">
+                    <button mat-raised-button color="Link" (click)="openDialog()">
+                        <fa-icon [icon]="['fas', 'plus']" size="1x"></fa-icon>
+                        Add a new category
+                    </button>
+                </div>
+            </div>
+            <table mat-table [dataSource]="categories.results" class="mat-elevation-z8">
+
+                <!-- Id Column -->
+                <ng-container matColumnDef="category_id">
+                    <th mat-header-cell *matHeaderCellDef> Id. </th>
+                    <td mat-cell *matCellDef="let element"> {{element.category_id}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="category_name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.category_name}} </td>
+                </ng-container>
+
+                <!-- Discount Column -->
+                <ng-container matColumnDef="category_discount">
+                    <th mat-header-cell *matHeaderCellDef> Discount </th>
+                    <td mat-cell *matCellDef="let element"> {{element.category_discount}} </td>
+                </ng-container>
+
+                <!-- Actions Column -->
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef> Actions </th>
+                    <td mat-cell *matCellDef="let element">
+                        <div class="action-buttons">
+                            <button class="action-button" (click)="editCategory(element)" mat-icon-button color="primary">
+                                <fa-icon [icon]="['fas', 'edit']">Edit</fa-icon>
+                            </button>
+                            <button class="action-button" (click)="deleteCategory(element.category_id)" mat-icon-button color="warn">
+                                <fa-icon [icon]="['fas', 'trash-alt']">Delete</fa-icon>
+                            </button>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-toolbar>
+                <mat-toolbar-row>
+                    <span class="example-spacer"></span>
+                    <mat-paginator #paginator class="paginator" [length]="categories.count" [pageSize]="10" (page)="paginatorEvent($event)"></mat-paginator>
+                </mat-toolbar-row>
+            </mat-toolbar>
+        </div>
+    </div>
+</div>
