--- a/irs-client/src/app/inventory/items/edititem/edititem.component.html
+++ b/irs-client/src/app/inventory/items/edititem/edititem.component.html
@@ -40,6 +40,15 @@
                         </mat-form-field>
                     </div>
                 </mat-grid-tile>
+
+                <mat-grid-tile>
+                    <div class="text-inside">
+                        <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Stock" formControlName="item_stock" required>
+                        </mat-form-field>
+                    </div>
+                </mat-grid-tile>
+
                 <mat-grid-tile>
                     <div class="text-inside">
                         <mat-form-field>
