--- a/irs-client/src/app/inventory/items/items.component.html
+++ b/irs-client/src/app/inventory/items/items.component.html
@@ -70,6 +70,12 @@
                     <td mat-cell *matCellDef="let element"> {{element.item_category.category_name}} </td>
                 </ng-container>
 
+                <!-- Category Column -->
+                <ng-container matColumnDef="item_stock">
+                    <th mat-header-cell *matHeaderCellDef> Stock </th>
+                    <td mat-cell *matCellDef="let element"> {{element.item_stock}} </td>
+                </ng-container>
+
                 <!-- Actions Column -->
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef> Actions </th>
