--- a/irs-client/src/app/inventory/category/edit-category/discard-edit-category/discard-edit-category.component.html
+++ b/irs-client/src/app/inventory/category/edit-category/discard-edit-category/discard-edit-category.component.html
@@ -1,1 +1,5 @@
-<p>discard-edit-category works!</p>
+<h3>Are you sure you want to discard the changes?</h3>
+<div>
+    <button mat-raised-button type="button" color="warn" class="Delete-btn" (click)="cancelN()">Discard</button>
+    <button mat-raised-button type="submit" class="Cancel-btn" (click)="cancel()">Cancel</button>
+</div>
