--- a/irs-client/src/app/main/auth-toolbar/auth-toolbar.component.html
+++ b/irs-client/src/app/main/auth-toolbar/auth-toolbar.component.html
@@ -1,18 +1,18 @@
 <mat-toolbar color="primary">
 
-  <mat-toolbar-row>
-    <span class="title"><a href="http://localhost:4200/">I. R. S.</a></span>
-<!--    <span class="toolbar-spacer"></span>-->
-    <div class="auth-controls">
-      <span class="auth-user">
+    <mat-toolbar-row>
+        <span class="title"><a href="http://localhost:4200/">I. R. S.</a></span>
+        <!--    <span class="toolbar-spacer"></span>-->
+        <div class="auth-controls">
+            <span class="auth-user">
         <fa-icon [icon]="['fas', 'user']"></fa-icon>
-        <a>Username</a>
+        <a>{{ username }}</a>
       </span>
-      <button mat-flat-button color="" (click)="logout()">
+            <button mat-flat-button color="" (click)="logout()">
         <fa-icon class="logout-icon" [styles]="{'color': '#000000de'}" [icon]="['fas', 'sign-out-alt']"></fa-icon>
         <span>Logout</span>
       </button>
-    </div>
-  </mat-toolbar-row>
+        </div>
+    </mat-toolbar-row>
 
 </mat-toolbar>
